--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev": "nodemon index.js"
     },
     "dependencies": {
+        "axios": "^1.10.0",
         "dotenv": "^16.5.0",
         "node-fetch": "^3.3.2",
         "openai": "^4.95.1",
