--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -7,7 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:headed": "playwright test --headed",
+    "test:screenshots": "playwright test visual-regression.spec.js",
+    "report": "node tests/e2e/screenshot-reporter.js",
+    "test:report": "npm run test:screenshots && npm run report"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -16,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@playwright/test": "^1.54.2",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
