--- a/web/backend/package.json
+++ b/web/backend/package.json
@@ -27,6 +27,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
+    "openai": "^5.12.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
