--- a/web/backend/docker-compose.yml
+++ b/web/backend/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   postgres:
     image: postgres:14-alpine
-    container_name: voice-notes-db
+    container_name: postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -18,6 +18,8 @@ services:
 
 volumes:
   voice_notes_data:
+    external: true
+    name: backend_voice_notes_data
 
 networks:
   voice-notes-network:
