--- a/web/backend/.env.example
+++ b/web/backend/.env.example
@@ -10,3 +10,7 @@ OBSIDIAN_PORT="27123"
 OBSIDIAN_API_KEY="your-obsidian-api-key-here"
 OBSIDIAN_FOLDER="Inbox"
 OBSIDIAN_VAULT_NAME="YourVaultName"
+
+# Obsidian Vault Path (optional, for macOS date fix)
+# If set, will use SetFile to update file creation/modification dates
+OBSIDIAN_VAULT_PATH="/Users/username/Documents/Obsidian Vault"
