--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@
 node_modules/
 /web/backend/dist
 web/backend/dist
-telegram-bot/temp_1755718280546.ogg
+# Telegram bot temporary audio files
+telegram-bot/temp_*.ogg
